updated swagger doc for redeem. included rinkeby implementation with automatic chain detection
